osso-af-startup (1.54-1) unstable; urgency=low

  * Do not create /tmp/.opi.tmp when running inside scratchbox
  * Fixes: NB#77416
  * Depend on osso-af-utils (>= 1.16-1) because of an xset770 bug fix.
  * Use symbolic key codes for xset770, and add code 104. Fixes: NB#81350

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Tue, 22 Apr 2008 14:38:23 +0300

osso-af-startup (1.53-3) unstable; urgency=low

  * Create user home directory if it's not there already. /I/ shouldn't have to do that

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Wed, 16 Apr 2008 09:19:34 +0300

osso-af-startup (1.53-2) unstable; urgency=low

  * Move creation of ~user/first-boot-flag from postinst to new preinst, because
    preinst gets $1 = install/upgrade depending on whether it's an install or an
    upgrade. We need this switch, because we must not touch ~user/first-boot-flag
    if it's an upgrade
  * Fixes: NB#84040

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Tue, 15 Apr 2008 13:20:53 +0300

osso-af-startup (1.53-1) unstable; urgency=low

  * Ensure controlpanel is not running while the device is in charging mode
    Fixes NB#83038

 -- Karl Lattimer <karl.lattimer@nokia.com>  Wed,  9 Apr 2008 16:01:57 +0300 

osso-af-startup (1.52-1) unstable; urgency=low

  * Patch from Leonid Moiseichuk
  * Fixes: NB#83437

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Thu,  3 Apr 2008 10:59:56 +0300

osso-af-startup (1.51-1) unstable; urgency=low

  * Don't call /etc/init.d/osso-ic from af-startup anymore. Call /etc/init.d/icd2 instead
  * Fixes: NB#80322

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Wed,  6 Feb 2008 13:26:18 +0200

osso-af-startup (1.50-1) unstable; urgency=low

  * Added RX-48-specific code. Phone pairing wizard and operator selection wizard
    only run if the device is not RX-48. Use $OSSO_PRODUCT_HARDWARE.
  * Remove references to wizback's set_progress_visible

 -- Gabriel Schulhof <gabriel.schulhof@nokia.com>  Mon,  4 Feb 2008 15:32:37 +0200
