@@ -148,6 +148,10 @@ start)
     if [ -x /usr/bin/rhapsody-installer.sh ]; then
       /usr/bin/rhapsody-installer.sh
     fi
+
+    # It is important to make sure all the newly created files have reached
+    # the storage media before removing first-boot-flag.
+    sync
     rm -f $HOME/first-boot-flag
     rm -f /tmp/suw-user-cancelled.tmp
     touch /tmp/.check_auto_install
